# thresholdvault

./: .gitignore  Cargo.toml  README.md  dfx.json  package.json  prd.md  whitepaper.md
.cargo/: config.toml
.gemini/: settings.json
canisters/bitcoin_wallet/: Cargo.toml
canisters/bitcoin_wallet/src/: bitcoin_wallet.did  lib.rs
canisters/guardian_mgr/: Cargo.toml
canisters/guardian_mgr/src/: guardian_mgr.did  lib.rs
canisters/heartbeat_tracker/src/: HeartbeatTracker.did  HeartbeatTracker.mo
canisters/vault_mgr/src/: Types.mo  VaultMgr.did  VaultMgr.mo
pwa/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
pwa/public/: manifest.json  sw.js
pwa/src/app/: globals.css  layout.tsx  page.tsx
pwa/src/components/auth/: LoginModal.tsx
pwa/src/components/common/: OfflineBanner.tsx
pwa/src/components/dashboard/: DashboardView.tsx  GuardiansView.tsx  HeartbeatView.tsx  SettingsView.tsx
pwa/src/components/forms/: CreateVaultWizard.tsx
pwa/src/components/guardians/: GuardianList.tsx
pwa/src/components/layout/: AppHeader.tsx  AppSidebar.tsx  MobileNav.tsx
pwa/src/components/onboarding/: OnboardingCarousel.tsx
pwa/src/components/vault/: HeartbeatRing.tsx  VaultCard.tsx  VaultDetailsPanel.tsx  VaultGrid.tsx
pwa/src/hooks/: useAuthClient.ts  useVaultData.ts  useVaultStatus.ts
pwa/src/lib/: fonts.ts  format.ts  spec.ts
pwa/src/services/: guardianService.ts  icActors.ts  vaultService.ts  walletService.ts
pwa/src/state/: uiStore.ts  vaultStore.ts
pwa/src/types/: vault.ts
scripts/: deploy.sh  init_access_control.sh  wasm-ar.sh  wasm-clang.sh  wasm-ranlib.sh
toolchains/include/: stddef.h  stdint.h
(+6 files in other folders)
