[package]
name = "bitcoin_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-btc-interface = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
ic-stable-structures = "0.7.2"
