[package]
name = "bitcoin_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
bitcoin = { version = "0.31.1", default-features = false, features = ["std"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
getrandom = { version = "0.2.16", features = ["custom"] }
