[package]
name = "guardian_mgr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-vetkeys = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
ic-stable-structures = "0.7.2"
