[package]
name = "guardian_mgr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-vetkeys = "0.5.0"
rand_chacha = "0.3"
getrandom = { version = "0.2.16", features = ["custom"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
thiserror = "1.0"
